# syfrah

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml  e2e.yml  release-dev.yml  release.yml
docs/: astro.config.mjs
docs/src/content/docs/: index.mdx
docs/src/content/docs/layers/core/: addressing.mdx  config.mdx  crypto.mdx  error.mdx  (+7 more)
docs/src/pages/: rest.astro
e2e/: 530_cp_gossip.md  531_cp_scheduler.md  532_cp_scheduler_constraints.md  533_cp_admission_recheck.md  534_cp_zone_create.md  535_cp_reschedule.md  550_cp_snapshots.md  551_cp_raft_metrics.md  552_cp_gossip_metrics.md  553_cp_migration.md  554_cp_learners.md  555_cp_failures.md
handbook/: adr-001-networking-roadmap.md  adr-002-security-groups-route-tables.md  adr-003-forge.md  adr-004-hypervisor-model.md  adr-005-control-plane.md  adr-006-storage.md  api-architecture.md  cli.md  external-api.md  networking-internals.md
layers/api/src/: router.rs
layers/compute/: Cargo.toml
layers/compute/src/: client.rs  config.rs  control.rs  disk.rs  error.rs  handler.rs  lib.rs  manager.rs  network.rs  network_setup.rs  process.rs  runtime.rs  runtime_backend.rs  runtime_ch.rs  runtime_container.rs  types.rs  volume_setup.rs
layers/compute/src/cli/: image.rs  mod.rs  vm.rs
layers/compute/src/image/: types.rs
layers/controlplane/: Cargo.toml
layers/controlplane/src/: client.rs  commands.rs  gossip.rs  idempotency.rs  lib.rs  log_storage.rs  network.rs  remote_create.rs  reschedule.rs  scheduler.rs  server.rs  service.rs  state_machine.rs  types.rs
layers/core/: Cargo.toml  README.md
layers/core/benches/: crypto_bench.rs
layers/core/src/: addressing.mdx  addressing.rs  config.mdx  config.rs  crypto.mdx  crypto.rs  error.mdx  error.rs  id.rs  ids.rs  lib.rs  logging.mdx  logging.rs  mesh.rs  overview.mdx  process.rs  resolve.rs  storage.rs  transport.mdx  transport.rs  validate.mdx  validate.rs  version.rs
layers/core/src/api/: error-response.mdx  error_response.rs  middleware.mdx  middleware.rs  mod.rs  route-gen.mdx  route_gen.rs  server.rs
layers/core/src/resource/: cli_gen.rs  dispatch.mdx  dispatch.rs  identity.mdx  mod.rs  operation.rs  presentation.mdx  registry.rs
layers/core/src/ui/: mod.rs  spinner.mdx
layers/core/tests/: resource_framework.rs
layers/core/tests/e2e/: Cargo.toml  resource_framework_test.rs
layers/fabric/: Cargo.toml
layers/fabric/benches/: fabric_bench.rs
layers/fabric/src/: daemon.rs  lib.rs  migration.rs  peering.rs  raft_compute_handler.rs  raft_handler.rs  raft_hypervisor_handler.rs  store.rs  topology.rs  ui.rs  vm_placement.rs  wg.rs
layers/fabric/src/cli/: hosts.rs  init.rs  join.rs  peers.rs  status.rs  topology.rs
layers/fabric/tests/: peering_protocol.rs  store_atomicity.rs  zones_regions.rs
layers/forge/: Cargo.toml
layers/forge/src/: api.rs  auth.rs  capacity.rs  cleanup.rs  degraded.rs  drain.rs  drift.rs  fencing.rs  gc.rs  generation.rs  health.rs  lib.rs  logging.rs  metrics.rs  ownership.rs  reconciler.rs  runtime.rs  shutdown.rs  storage_cleanup.rs  storage_migration.rs  storage_reconciler.rs  task.rs  tracing_otel.rs
layers/hypervisor/: Cargo.toml
layers/hypervisor/src/: doctor.rs  handlers.rs  lib.rs
layers/hypervisor/src/controlplane/: mod.rs  ops.mdx  ops.rs  overview.mdx  service.mdx  service.rs  store.rs
layers/hypervisor/src/fabric/: announce.rs  backend.mdx  backend.rs  health.rs  mesh.mdx  mesh.rs  mod.rs  ops.mdx  ops.rs  peer.rs  peering.rs  peering_client.rs  peering_server.rs  service.rs  state.mdx  state.rs  tls.rs  wg.rs
layers/hypervisor/src/fabric/direct/: mod.rs
layers/hypervisor/src/fabric/mock/: mod.rs
layers/hypervisor/src/fabric/wireguard/: mod.rs  wg.mdx  wg.rs
layers/hypervisor/src/storage/: ops.mdx  ops.rs  overview.mdx  region.rs  service.rs
layers/hypervisor/tests/e2e/: Cargo.toml  cli_test.sh  peering_test.rs
layers/org/: Cargo.toml
layers/org/src/: api.rs  daemon.rs  discovery.rs  error.rs  hypervisor.rs  hypervisor_handler.rs  ipam.rs  lib.rs  nic.rs  placement.rs  sg_rules.rs  storage_store.rs  store.rs  tests.rs  ttl.rs  types.rs  validation.rs  vpc.rs
layers/org/src/cli/: env.rs  hypervisor.rs  mod.rs  nat_gw.rs  org.rs  project.rs  route.rs  sg.rs  subnet.rs  vpc.rs
layers/overlay/: Cargo.toml
layers/overlay/src/: backend.rs  bridge_tests.rs  error.rs  fdb.rs  lib.rs  linux.rs  mock.rs  mock_backend.rs  naming.rs  nft.rs  reconcile.rs  recovery.rs  rollback.rs  sg.rs  sg_nft.rs  sysctl.rs  tap.rs  veth_peer.rs  vxlan.rs
layers/overlay/src/cli/: mod.rs  sg.rs
layers/state/: Cargo.toml  README.md
layers/state/src/: cluster.rs  lib.rs  overview.mdx
layers/storage/: Cargo.toml  README.md  build.rs
layers/storage/src/: api.rs  binary.rs  cache.rs  lib.rs  nbd.rs  s3_health.rs  volume_mgr.rs
layers/storage/src/cli/: configure.rs  fmt.rs  health.rs  mod.rs  snapshot.rs  volume.rs
scripts/: install.sh
tests/e2e/: Dockerfile  lib.sh
tests/e2e/scenarios/: 01_fabric_mesh_formation.md  02_fabric_mesh_connectivity.md  03_fabric_node_leave.md  04_fabric_daemon_restart.md  05_fabric_large_mesh.md  06_fabric_network_partition.md  07_fabric_concurrent_joins.md  08_fabric_secret_rotation.md  09_fabric_state_corruption.md  100_ux_flow_reboot.md  101_ux_flow_scaling.md  102_ux_flow_pin_onboarding.md  103_ux_flow_secret_rotation.md  104_ux_flow_churn.md  105_ux_errors_init.md  106_ux_errors_join.md  107_ux_errors_lifecycle.md  108_ux_errors_commands.md  109_ux_errors_no_raw_errors.md  10_fabric_stale_pid.md  11_fabric_rejoin_new_key.md  12_fabric_convergence_time.md  13_fabric_tunnel_throughput.md  14_fabric_rapid_scale_down.md  15_fabric_two_meshes.md  16_fabric_stress_max_nodes.md  17_fabric_stress_sustained_throughput.md  18_fabric_stress_join_storm.md  19_fabric_stress_churn.md  200_org_crud.md  201_org_cli.md  202_project_crud.md  203_project_cli.md  204_env_crud.md  205_env_cli.md  206_env_ttl_enforcement.md  207_env_deletion_protection.md  208_org_full_hierarchy.md  20_fabric_stress_announcement_flood.md  210_vpc_crud.md  (+223 more)
tests/integration/: Cargo.toml
(+42 files in other folders)
