[workspace]
resolver = "2"
members = [
    "layers/core",
    "layers/state",
    "layers/hypervisor",
    "layers/controlplane",
    "bin/syfrah",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sacha-ops/syfrah"
keywords = ["cloud", "wireguard", "mesh", "control-plane", "infrastructure"]
categories = ["network-programming", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"
