[package]
name = "syfrah-controlplane"
description = "Control plane layer — distributed consensus via Raft for Syfrah"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
openraft = { version = "0.10.0-alpha.17", features = ["serde", "type-alias"] }
foca = { version = "1.0.0", features = ["std", "bincode-codec"] }
rand = "0.9"
bincode = "2"
bytes = "1"
syfrah-org = { path = "../org" }
syfrah-state = { path = "../state" }
async-trait = "0.1"
axum = "0.8"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
