[package]
name = "syfrah-controlplane"
description = "Syfrah control plane — TiKV cluster management over the WireGuard mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
syfrah-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
