[package]
name = "syfrah-core"
description = "Core resource framework for Syfrah cloud platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
console = "0.15"
indicatif = "0.17"
terminal_size = "0.4"
unicode-width = "0.2"
clap = { workspace = true, features = ["derive", "env"] }
rand = "0.8"
ulid = "1.2"
toml = "0.8"
async-trait = "0.1"
dirs = "5"
libc = "0.2"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
