[package]
name = "syfrah-forge"
description = "Forge layer — per-node resource orchestrator for Syfrah"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syfrah-api = { path = "../api" }
syfrah-compute = { path = "../compute" }
syfrah-controlplane = { path = "../controlplane" }
syfrah-org = { path = "../org" }
syfrah-overlay = { path = "../overlay" }
syfrah-state = { path = "../state" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
axum = "0.8"
hyper = "1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
