[package]
name = "syfrah-org"
description = "Org layer — organization and tenant management for Syfrah"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syfrah-api = { path = "../api" }
syfrah-state = { path = "../state" }
anyhow.workspace = true
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
