[package]
name = "syfrah-org"
description = "Org layer — organization and tenant management for Syfrah"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syfrah-api = { path = "../api" }
syfrah-state = { path = "../state" }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
console = "0.15"
serde.workspace = true
serde_json.workspace = true
terminal_size = "0.4"
ipnet = { version = "2", features = ["serde"] }
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
