[package]
name = "syfrah-overlay"
description = "Overlay layer — virtual networking for Syfrah"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syfrah-core = { path = "../core" }
syfrah-api = { path = "../api" }
async-trait = "0.1"
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
