[package]
name = "syfrah-overlay"
description = "Overlay layer — virtual networking for Syfrah"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syfrah-core = { path = "../core" }
syfrah-api = { path = "../api" }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
console = "0.15"
terminal_size = "0.4"
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "process", "net", "io-util"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
