[package]
name = "syfrah-storage"
description = "Storage layer — block and object storage for Syfrah"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syfrah-api = { path = "../api" }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
dirs = "6"
serde.workspace = true
serde_json.workspace = true
terminal_size = "0.4"
anyhow.workspace = true
libc = "0.2"
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
