[package]
name = "syfrah-storage"
description = "Storage layer — block and object storage for Syfrah"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
test-helpers = []

[dependencies]
syfrah-api = { path = "../api" }
syfrah-controlplane = { path = "../controlplane" }
syfrah-org = { path = "../org" }
syfrah-state = { path = "../state" }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
dirs = "6"
serde.workspace = true
serde_json.workspace = true
terminal_size = "0.4"
anyhow.workspace = true
libc = "0.2"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
