[package]
name = "syfrah-hypervisor-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "peering"
path = "peering_test.rs"

[dependencies]
syfrah-core = { path = "../../../core" }
syfrah-state = { path = "../../../state" }
syfrah-hypervisor = { path = "../../" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
tempfile = "3"
axum = "0.8"
http = "1"
tower = "0.5"
serde_json = "1"
